Fix lobby layout on small screens

--- a/src/components/Lobby/Lobby.scss
+++ b/src/components/Lobby/Lobby.scss
@@ -6,18 +6,11 @@
     height: 100vh;
     text-align: center;
     background-color: #1a1a1d;
-
-    @media screen and (max-width: 480px) {
-      height: 100%;
-    }
   }
 
   &__inner-container {
-    width: 20%;
-
-    @media screen and (max-width: 480px) {
-      width: 90%;
-    }
+    width: 70%;
+    max-width: 400px;
   }
 
   &__input {
@@ -44,6 +37,11 @@
   background-color: #2979ff;
   border: none;
   border-radius: 5px;
+  transition: all 0.3s;
+
+  &:hover {
+    background-color: #1f61d4;
+  }
 
   &:focus {
     outline: 0;
